# Cyborg-Shield

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
config/: default_rules.json  rules.json
cyborg_shield/: __init__.py  main.py
cyborg_shield/firewall/: __init__.py  iptables_adapter.py  rules.py
cyborg_shield/monitor/: __init__.py  traffic.py
cyborg_shield/ui/: __init__.py  ascii_art.py  dashboard.py  theme.py
cyborg_shield/utils/: __init__.py  logger.py
tests/: test_rules.py  test_traffic.py
